--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
       <p class="text-gray-700 text-lg md:text-xl">
         From households to businesses, we provide professional LPG installation, refills, maintenance, and contracts tailored to your needs.
       </p>
-      <a href="#services" class="inline-block mt-4 px-8 py-3 rounded-lg font-medium text-white" style="background: linear-gradient(90deg,#3b82f6,#0ea5e9);" id="hero-cta">
+      <a href="services.html" class="inline-block mt-4 px-8 py-3 rounded-lg font-medium text-white" style="background: linear-gradient(90deg,#3b82f6,#0ea5e9);" id="hero-cta">
         Get Started
       </a>
     </div>
     <!-- Image -->
     <div class="md:w-1/2 slide-img-left">
-      <img src="https://media.istockphoto.com/id/1559360023/photo/dependence-of-oil-and-gas.jpg?s=612x612&w=0&k=20&c=QF3NqkFcsK650W87NyrRjC4vyUSHZwATT9qS0zuY6Z4=" alt="BluePlanet LPG Hero" class="rounded-xl shadow-md w-full h-[400px] object-cover">
+      <img src="https://media.istockphoto.com/id/485330496/photo/blue-gas-cylinders.jpg?s=612x612&w=0&k=20&c=7yLKHmHd0w5nvdEVZQleNffkFHOHBqgzg18LiwXMMKE=" alt="BluePlanet LPG Hero" class="rounded-xl shadow-md w-full h-[400px] object-cover">
     </div>
   </section>
 
@@ -425,4 +425,5 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 </script>
 </body>
+
 </html>
